[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fingerprintiq"
dynamic = ["version"]
description = "Official Python SDK for FingerprintIQ — visitor identification, API caller classification, and CLI usage analytics"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "FingerprintIQ", email = "hello@fingerprintiq.com" },
]
keywords = [
  "fingerprint",
  "bot-detection",
  "ai-agent-detection",
  "visitor-identification",
  "cli-analytics",
  "machine-fingerprint",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "psutil>=5.9",
]

[project.optional-dependencies]
fastapi = [
  "fastapi>=0.100",
  "starlette>=0.27",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.5",
  "mypy>=1.10",
  "fastapi>=0.100",
  "starlette>=0.27",
  "httpx>=0.27",
]

[project.urls]
Homepage = "https://fingerprintiq.com"
Documentation = "https://docs.fingerprintiq.com"
Repository = "https://github.com/fingerprintiq/python"
Issues = "https://github.com/fingerprintiq/python/issues"
Changelog = "https://docs.fingerprintiq.com/changelog"

[tool.hatch.version]
path = "src/fingerprintiq/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fingerprintiq"]

[tool.hatch.build.targets.sdist]
include = [
  "src/fingerprintiq",
  "README.md",
  "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# _transport.py intentionally swallows network errors silently (Pulse is fire-and-forget);
# nested ifs in _fingerprint.py guard platform-specific attributes defensively;
# ComSpec is the Windows env var casing.
"src/fingerprintiq/pulse/_transport.py" = ["SIM105"]
"src/fingerprintiq/pulse/_fingerprint.py" = ["SIM102", "SIM112"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
  "parity: cross-language fingerprint parity tests (require node)",
]
